--- a/package.json
+++ b/package.json
@@ -155,9 +155,9 @@
   "devDependencies": {
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-conventional": "8.1.0",
-    "git-branch-is": "2.1.0",
-    "husky": "3.0.2",
+    "git-branch-is": "^3.0.0",
+    "husky": "^3.0.4",
     "npm-run-all": "~4.1.5",
-    "semantic-release": "15.13.19"
+    "semantic-release": "^15.13.24"
   }
 }
