--- a/admin/package.json
+++ b/admin/package.json
@@ -13,26 +13,26 @@
     "analyze": "ANALYZE_BUNDLE=true npm run build"
   },
   "dependencies": {
-    "@material-ui/core": "4.3.1",
+    "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "4.2.1",
-    "@types/history": "4.7.2",
+    "@types/history": "^4.7.3",
     "@types/qs": "6.5.3",
-    "@types/react": "16.8.24",
-    "@types/react-dom": "16.8.5",
-    "@types/react-redux": "7.1.1",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "4.1.18",
     "axios": "0.19.0",
-    "core-js": "3.1.4",
+    "core-js": "^3.2.1",
     "history": "4.9.0",
-    "qs": "6.7.0",
+    "qs": "^6.8.0",
     "ra-input-rich-text": "2.9.3",
     "ra-language-english": "2.9.3",
-    "react": "16.8.6",
+    "react": "^16.9.0",
     "react-admin": "2.8.6",
-    "react-dom": "16.8.6",
-    "react-hot-loader": "4.12.10",
-    "react-redux": "7.1.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
+    "react-redux": "^7.1.1",
     "redux-actions": "2.6.5",
     "redux-saga": "1.0.5",
     "styled-components": "4.3.2"
@@ -46,12 +46,12 @@
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.0",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "babel-plugin-macros": "2.6.1",
@@ -59,29 +59,29 @@
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "3.2.0",
-    "eslint": "6.1.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-config-standard": "13.0.1",
-    "eslint-loader": "2.2.1",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-standard": "^14.0.1",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-standard": "4.0.0",
-    "file-loader": "4.1.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.8.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "0.8.0",
     "prettier": "1.18.2",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
     "typescript": "3.5.3",
     "webapp-webpack-plugin": "2.7.1",
-    "webpack": "4.39.1",
+    "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "3.4.1",
-    "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.7.2"
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   }
 }
