--- a/client/package.json
+++ b/client/package.json
@@ -19,29 +19,29 @@
   "dependencies": {
     "@babel/polyfill": "7.4.4",
     "@lingui/react": "2.8.3",
-    "@material-ui/core": "4.3.1",
+    "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "4.2.1",
-    "@sentry/browser": "5.6.0",
-    "@testing-library/jest-dom": "4.0.0",
+    "@sentry/browser": "^5.6.2",
+    "@testing-library/jest-dom": "^4.1.0",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
     "@types/lingui__react": "2.8.0",
-    "@types/react": "16.8.24",
-    "@types/react-dom": "16.8.5",
-    "@types/react-redux": "7.1.1",
-    "@types/react-router-dom": "4.3.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^4.3.5",
     "@types/redux-actions": "2.6.1",
     "@types/redux-logger": "3.0.7",
     "@types/styled-components": "4.1.18",
     "axios": "0.19.0",
     "connected-react-router": "6.5.2",
-    "core-js": "3.1.4",
+    "core-js": "^3.2.1",
     "history": "4.9.0",
     "query-string": "6.8.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-hot-loader": "4.12.10",
-    "react-redux": "7.1.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
+    "react-redux": "^7.1.1",
     "react-router-dom": "5.0.1",
     "redux": "4.0.4",
     "redux-actions": "2.6.5",
@@ -62,13 +62,13 @@
     "@lingui/cli": "2.8.3",
     "@lingui/loader": "2.8.3",
     "@lingui/macro": "2.8.3",
-    "@testing-library/react": "8.0.8",
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.0",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@testing-library/react": "^9.1.3",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "babel-plugin-macros": "2.6.1",
@@ -77,31 +77,31 @@
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "3.2.0",
     "cypress": "3.4.1",
-    "eslint": "6.1.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-config-standard": "13.0.1",
-    "eslint-loader": "2.2.1",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-standard": "^14.0.1",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-standard": "4.0.0",
-    "file-loader": "4.1.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.8.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "0.8.0",
-    "pg-promise": "9.0.0",
+    "pg-promise": "^9.1.0",
     "prettier": "1.18.2",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
     "typescript": "3.5.3",
     "webapp-webpack-plugin": "2.7.1",
-    "webpack": "4.39.1",
+    "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "3.4.1",
-    "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.7.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
     "webpack-pwa-manifest": "4.0.0",
     "workbox-webpack-plugin": "4.3.1"
   }
