--- a/graphql/package.json
+++ b/graphql/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "7.4.4",
     "@babel/runtime": "7.5.5",
-    "koa": "2.7.0",
+    "koa": "^2.8.1",
     "koa-cache-control": "2.0.0",
     "koa-proxy": "1.0.0-alpha.3",
     "koa-router": "7.4.0",
@@ -28,15 +28,15 @@
     "@babel/plugin-transform-runtime": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/register": "7.5.5",
-    "babel-eslint": "10.0.2",
+    "babel-eslint": "^10.0.3",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "eslint": "6.1.0",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint": "^6.2.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.0",
-    "jest": "24.8.0",
+    "jest": "^24.9.0",
     "nodemon": "1.19.1",
     "prettier": "1.18.2",
     "pretty-quick": "1.11.1"
