--- a/server/package.json
+++ b/server/package.json
@@ -12,59 +12,59 @@
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
-    "@sentry/node": "5.6.0",
-    "aws-sdk": "2.508.0",
+    "@sentry/node": "^5.6.2",
+    "aws-sdk": "^2.517.0",
     "boom": "7.3.0",
     "bunyan": "1.8.12",
-    "koa": "2.7.0",
+    "koa": "^2.8.1",
     "koa-basic-auth": "4.0.0",
     "koa-joi-router": "6.0.0",
     "koa-qs": "2.0.0",
     "lodash": "4.17.15",
     "moment": "2.24.0",
     "moment-timezone": "0.5.26",
-    "mustache": "3.0.1",
-    "pg-promise": "9.0.0",
+    "mustache": "^3.0.2",
+    "pg-promise": "^9.1.0",
     "request": "2.88.0",
     "request-promise": "4.2.4",
     "showdown": "1.9.0",
     "stack-trace": "0.0.10",
     "unescape": "1.0.1",
-    "uuid": "3.3.2"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/boom": "7.3.0",
     "@types/bunyan": "1.8.6",
-    "@types/cheerio": "0.22.12",
+    "@types/cheerio": "^0.22.13",
     "@types/co-body": "0.0.3",
-    "@types/jest": "24.0.17",
+    "@types/jest": "^24.0.18",
     "@types/joi": "14.3.3",
     "@types/koa": "2.0.49",
     "@types/koa-basic-auth": "2.0.3",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "7.0.42",
-    "@types/lodash": "4.14.136",
+    "@types/lodash": "^4.14.137",
     "@types/moment-timezone": "0.5.12",
     "@types/mustache": "0.8.32",
-    "@types/node": "12.7.0",
-    "@types/pg": "7.4.14",
+    "@types/node": "^12.7.2",
+    "@types/pg": "^7.11.0",
     "@types/request": "2.48.2",
     "@types/request-promise": "4.1.44",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
     "@types/uuid": "3.4.5",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "cheerio": "1.0.0-rc.3",
-    "eslint": "6.1.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-config-standard": "13.0.1",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-standard": "^14.0.1",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "4.0.0",
-    "jest": "24.8.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^24.9.0",
     "prettier": "1.18.2",
     "ts-jest": "24.0.2",
     "ts-node-dev": "1.0.0-pre.40",
