--- a/admin/package.json
+++ b/admin/package.json
@@ -28,11 +28,11 @@
     "qs": "^6.8.0",
     "ra-input-rich-text": "2.9.3",
     "ra-language-english": "2.9.3",
-    "react": "^16.9.0",
-    "react-admin": "2.8.6",
-    "react-dom": "^16.9.0",
+    "react": "16.8.0",
+    "react-admin": "2.9.6",
+    "react-dom": "16.8.0",
     "react-hot-loader": "^4.12.11",
-    "react-redux": "^7.1.1",
+    "react-redux": "5.0.7",
     "redux-actions": "2.6.5",
     "redux-saga": "1.0.5",
     "styled-components": "4.3.2"
