-Fix linter errors -Rename blog dir to src -Configure JSON logging format for Stackdriver -Add request latency to logging

--- a/alternatives/server-flask/Dockerfile
+++ b/alternatives/server-flask/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.7-alpine
 ARG SERVICE_DIR=.
 ENV FLASK_ENV development
-ENV FLASK_APP blog
+ENV FLASK_APP src
 
 RUN apk add --update-cache \
   g++ \
