--- a/alternatives/server-flask/nginx.conf
+++ b/alternatives/server-flask/nginx.conf
@@ -2,9 +2,9 @@ server {
     listen 8080 default_server;
     listen [::]:8080 default_server;
 
-    location / { try_files $uri @blog; }
-    location @blog {
+    location / { try_files $uri @uwsgi; }
+    location @uwsgi {
         include uwsgi_params;
-        uwsgi_pass unix:/var/run/nginx/blog.sock;
+        uwsgi_pass unix:/var/run/nginx/uwsgi.sock;
     }
 }
