--- a/alternatives/server-flask/uwsgi.ini
+++ b/alternatives/server-flask/uwsgi.ini
@@ -1,10 +1,10 @@
 [uwsgi]
-module = blog:create_app()
+module = src:create_app()
 
 master = true
 processes = 5
 
 uid=nginx
 
-socket = /var/run/nginx/blog.sock
+socket = /var/run/nginx/uwsgi.sock
 vacuum = true
